style: ProductViewMore overflow fixed

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -86,6 +86,7 @@
   }
 
   .backdrop-blur-custom {
+    --tw-backdrop-blur: blur(4px);
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
   }
